samples/_failures_safe/1761172052_2c5a74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce7f4698.c: In function ‘main’:
./samples/SAFE/__tmp_ce7f4698.c:152:5: error: expected declaration or statement at end of input
  152 |     process_text(input);
      |     ^~~~~~~~~~~~
